--- a/DOM/dom.css
+++ b/DOM/dom.css
@@ -3,3 +3,21 @@ img{
     width: 300px;
     margin-top: 20px;
 }
+
+.main{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+input{
+    width: 200px;
+
+}
+label{
+margin-top:15px;
+}
+
+#form{
+    width: 180px;
+    height: 30px;
+}
