--- a/DOM/dom.css
+++ b/DOM/dom.css
@@ -1,3 +1,7 @@
+body{
+    margin:0;
+}
+
 img{
     height: 300px;
     width: 300px;
@@ -20,4 +24,20 @@ margin-top:15px;
 #form{
     width: 180px;
     height: 30px;
+}
+
+/*Ejercicio 6*/
+.container{
+    width: 100vw;
+    background-color: black;
+    color:#ffffff; 
+    font-size: 1.4rem;
+}
+@font-face {
+    font-family: 'MyWebFont';
+    src: url('DK Crayon Crumble.ttf') format('truetype');
+}
+
+.texto{
+    font-family: 'MyWebFont';
 }
